# SilentEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Assets/Locales/English (Original)/: Locale.json
Assets/Locales/en/: Locale.json  locale.json
Assets/Locales/en (Original)/: Locale.json
Shaders/: Default.vert  Fragment.frag.hlsl  FullscreenQuad.frag  RawTriangle.vert.hlsl
Source/: Application.cpp  Application.h  Compatibility.cpp  Compatibility.h  Config.h  Debug.cpp  Debug.h  Framework.h  Main.cpp  Platform.cpp  Platform.h  Types.h
Source/Assets/: Assets.cpp  Assets.h  Fonts.cpp  Fonts.h  Locales.cpp  Locales.h  TranslationKeys.h
Source/Assets/Parsers/: Tim.cpp  Tmd.cpp  Tmd.h
Source/Audio/: Audio.cpp  Audio.h
Source/Engine/: Application.cpp  Application.h
Source/Engine/Assets/: Assets.cpp  Assets.h
Source/Engine/Assets/Parsers/: Tim.cpp  Tim.h  Tmd.cpp
Source/Engine/Audio/: Audio.cpp  Audio.h
Source/Engine/Game/: Test.cpp  Test.h  main.cpp  main.h
Source/Engine/Game/Hud/: Hud.cpp  Hud.h  Toast.cpp  Toast.h
Source/Engine/Input/: Action.cpp  Action.h  Binding.cpp  Binding.h  Event.cpp  Event.h  Input.cpp  Input.h  Text.cpp  Text.h
Source/Engine/Renderer/: Base.cpp  Base.h  Renderer.cpp  Renderer.h
Source/Engine/Renderer/Backends/OpenGl/: ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  OpenGl.cpp  OpenGl.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  View.cpp
Source/Engine/Renderer/Backends/SdlGpu/: Buffer.cpp  Buffer.h  Pipeline.cpp  Pipeline.h  SdlGpu.cpp  SdlGpu.h  Texture.cpp  Texture.h
Source/Engine/Renderer/Backends/Vulkan/: Vulkan.cpp  Vulkan.h
Source/Engine/Renderer/Common/: Enums.h  Utils.cpp  Utils.h  View.cpp  View.h
Source/Engine/Renderer/Common/Objects/: Material.h  Mesh.h  Primitive2d.cpp  Primitive2d.h  Primitive3d.cpp  Primitive3d.h  Sprite2d.cpp  Sprite2d.h  Vertex2d.h  Vertex3d.h
Source/Engine/Renderer/Common/Objects/Drawable/: Mesh.h
Source/Engine/Renderer/Common/Objects/Graphic/: Bucket.h
Source/Engine/Renderer/Common/Objects/Primitive/: Triangle.h  (+2 more)
Source/Engine/Renderer/Objects/: Primitive2d.cpp  Primitive2d.h
Source/Engine/Renderer/Structures/: Primitive2d.cpp  Primitive2d.h
Source/Engine/Savegame/: Savegame.cpp  Savegame.h
Source/Engine/Services/: Audio.cpp  Audio.h  Filesystem.cpp  Filesystem.h  Options.cpp  Options.h  Sound.cpp  Sound.h  String.cpp  String.h  Time.cpp  Time.h  Toasts.cpp  Toasts.h
Source/Engine/Services/Assets/: Assets.cpp  Assets.h
Source/Engine/Services/Assets/Parsers/: Tim.cpp
Source/Engine/Services/Compatibility/PsyCross/: Font.h  Gpu.cpp  Gpu.h  Gte.cpp  Gte.h  Render.cpp  Render.h
Source/Engine/Services/Hud/: Hud.cpp  Hud.h  Toast.cpp  Toast.h
Source/Engine/Services/Input/: Action.cpp  Binding.cpp  Binding.h  Event.cpp  Input.cpp  Input.h  Text.cpp  Text.h
Source/Engine/Services/Savegame/: Savegame.cpp  Savegame.h
Source/Game/: Dummy.cpp  Game.cpp  Game.h  dummy.cpp  dummy.h  main.cpp  main.h
Source/Game/Screens/Options/: Brightness.cpp  Brightness.h  Controller.cpp  Controller.h  MenuGraphics.cpp  MenuGraphics.h  Options.cpp  Options.h  ScreenPosition.h  SelectionGraphics.cpp  SelectionGraphics.h
Source/Game/include/: common.h
Source/Game/include/screens/options/: brightness.h  controller.h  menu_graphics.h  options.h  screen_position.h  selection_graphics.h
Source/Game/screens/options/: brightness.cpp  brightness.h  controller.cpp  controller.h  menu_graphics.cpp  menu_graphics.h  options.cpp  options.h  screen_position.h  selection_graphics.cpp  selection_graphics.h
Source/Game/src/screens/options/: brightness.cpp  controller.cpp  menu_graphics.cpp  options.cpp  selection_graphics.cpp
Source/Input/: Action.cpp  Action.h  Binding.cpp  Binding.h  Event.cpp  Event.h  Input.cpp  Input.h  Text.cpp  Text.h
Source/Math/: Constants.h  FixedPoint.h  Legacy.cpp  Legacy.h  Math.h  Rng.cpp  Rng.h  Utils.cpp
Source/Math/Objects/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  AxisAngle.cpp  AxisAngle.h  BezierCurve2.cpp  BezierCurve2.h  BoundingSphere.cpp  BoundingSphere.h  Color.cpp  Color.h  EulerAngles.cpp  EulerAngles.h  Matrix.cpp  Matrix.h  OrientedBoundingBox.cpp  OrientedBoundingBox.h  Quaternion.cpp  Quaternion.h  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector3i.cpp  Vector3i.h  Vector4.h
Source/Renderer/: Renderer.cpp  Renderer.h
Source/Renderer/Backends/OpenGl/: ElementBuffer.cpp  FrameBuffer.cpp  FrameBuffer.h  OpenGl.cpp  OpenGl.h  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Renderer/Backends/SdlGpu/: Buffer.cpp  Buffer.h  Pipeline.cpp  Pipeline.h  PipelineConfig.cpp  PipelineConfig.h  SdlGpu.cpp  SdlGpu.h  Texture.cpp
Source/Renderer/Common/: Constants.h  Enums.h  Utils.cpp  Utils.h  View.cpp
Source/Renderer/Common/Objects/: Primitive2d.cpp  Primitive2d.h  Primitive3d.cpp  Primitive3d.h
Source/Renderer/Common/Objects/Drawable/: Mesh.h
Source/Renderer/Common/Objects/Primitive/: Vertex2d.h  Vertex3d.h
Source/Renderer/Common/Objects/Scene/: Sprite2d.cpp  Sprite2d.h  Text.cpp  Text.h
Source/Renderer/Shaders/: Crt.frag.hlsl  TexturedQuad.frag.hlsl  TexturedQuad.vert.hlsl  Vignette.frag.hlsl
Source/Renderer/Shaders/Old/: FullscreenQuad.vert  PostProcess.frag  PostProcess.vert
Source/Renderer/Shaders/Test/: Crt.frag.hlsl  RawTriangle.vert.hlsl
Source/Savegame/: Savegame.cpp  Savegame.h
Source/Services/: Clock.cpp  Clock.h  Filesystem.cpp  Filesystem.h  Options.cpp  Options.h  String.cpp  String.h  Time.cpp  Time.h  Toasts.cpp  Toasts.h  TranslationKeys.cpp  TranslationKeys.h
Source/Utils/: BitField.cpp  BitField.h  Bitfield.cpp  Bitfield.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Compatibility.cpp  Compatibility.h  Debug.cpp  Debug.h  Font.cpp  Font.h  Parallel.cpp  Parallel.h  SpatialHash.cpp  SpatialHash.h  Stream.cpp  Stream.h  Translator.cpp  Translator.h  Utils.cpp  Utils.h
Tools/: GenerateSavegame.py  GenerateShaders.py
(+13 files in other folders)
